--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1>CodeSense Evaluation Platform</h1>
         <div class="nav-links">
             <a href="leaderboard.html">Leaderboard</a>
-            <a href="github.link">Code</a>
+            <a href="https://github.com/Monoshi-tonmoy">Code</a>
         </div>
     </div>
 </body>
