--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <h1>CodeSense Evaluation Platform</h1>
         <div class="nav-links">
             <a href="leaderboard.html">Leaderboard</a>
-            <a href="https://github.com/Monoshi-tonmoy">Code</a>
+            <a href="https://github.com/codesense-bench/codesense-codes">Code</a>
+            <a href="">Dataset</a>
         </div>
     </div>
 </body>
