--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="nav-links">
             <a href="leaderboard.html">Leaderboard</a>
             <a href="https://github.com/codesense-bench/codesense-codes">Code</a>
-            <a href="">Dataset</a>
+            <a href="https://huggingface.co/datasets/codesense-bench/codesense/tree/main">Dataset</a>
         </div>
     </div>
 </body>
