--- a/index.html
+++ b/index.html
@@ -3,64 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeSense Eval</title>
+    <title>CodeSense Evaluation Platform</title>
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-family: 'Segoe UI', Roboto, sans-serif;
             margin: 0;
-            padding: 2rem;
-            background-color: #f6f8fa;
+            padding: 0;
+            background-color: #f4f6f8;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             min-height: 100vh;
         }
 
         .container {
-            text-align: center;
             max-width: 800px;
-            padding: 2rem;
+            width: 90%;
             background: white;
-            border-radius: 12px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-            margin-top: 2rem;
+            border-radius: 16px;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+            padding: 3rem 2rem;
+            text-align: center;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         h1 {
-            color: #2f363d;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #2c3e50;
+        }
+
+        p.description {
+            font-size: 1.1rem;
+            color: #4a4a4a;
             margin-bottom: 2rem;
+            line-height: 1.6;
         }
 
         .nav-links {
             display: flex;
-            gap: 1rem;
-            flex-direction: column;
-            width: 100%;
-            max-width: 300px;
+            justify-content: center;
+            gap: 1.2rem;
+            flex-wrap: wrap;
+            margin-top: 2rem;
         }
 
-        a {
+        .nav-links a {
             text-decoration: none;
-            color: white;
             background-color: #2ea44f;
-            padding: 12px 24px;
-            border-radius: 6px;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 8px;
             font-weight: 500;
-            transition: background-color 0.2s;
+            transition: background-color 0.3s ease;
         }
 
-        a:hover {
+        .nav-links a:hover {
             background-color: #22863a;
         }
 
+        footer {
+            margin-top: 3rem;
+            font-size: 0.9rem;
+            color: #888;
+        }
+
         @media (max-width: 600px) {
-            body {
-                padding: 1rem;
-            }
-            
             .container {
-                padding: 1.5rem;
-                width: 90%;
+                padding: 2rem 1rem;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            .nav-links {
+                flex-direction: column;
+                gap: 1rem;
             }
         }
     </style>
@@ -68,10 +92,17 @@
 <body>
     <div class="container">
         <h1>CodeSense Evaluation Platform</h1>
+        <p class="description">
+            <strong>CodeSense</strong> is a benchmark designed for fine-grained code reasoning across real-world Python, C, and Java software projects.
+            It enables deeper semantic understanding beyond coarse input/output tasks, offering execution traces and tools to evaluate LLMs in practical software engineering contexts.
+        </p>
         <div class="nav-links">
-            <a href="leaderboard.html">Leaderboard</a>
-            <a href="https://github.com/codesense-bench/codesense-codes">Code</a>
-            <a href="https://huggingface.co/datasets/codesense-bench/codesense/tree/main">Dataset</a>
+            <a href="leaderboard.html">🏆 Leaderboard</a>
+            <a href="https://github.com/codesense-bench/codesense-codes" target="_blank">📦 Code</a>
+            <a href="https://huggingface.co/datasets/codesense-bench/codesense/tree/main" target="_blank">
+                <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 20px; vertical-align: middle; margin-right: 8px;">
+                Dataset
+            </a>
         </div>
     </div>
 </body>
