--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,35 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard - CodeSense Eval</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f6f8fa;
-            text-align: center;
-            padding: 20px;
-        }
-        .message {
-            font-size: 1.5rem;
-            color: #2f363d;
-            padding: 2rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CodeSense Leaderboard</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background-color: #f6f8fa;
+      margin: 0;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      color: #2f363d;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      color: #2ea44f;
+      margin-top: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .leaderboard-section {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      width: 100%;
+      max-width: 900px;
+      overflow-x: auto;
+      margin-bottom: 2rem;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    thead {
+      background-color: #2ea44f;
+      color: white;
+    }
+
+    th, td {
+      padding: 1rem;
+      text-align: left;
+      border-bottom: 1px solid #e1e4e8;
+    }
+
+    @media (max-width: 600px) {
+      th, td {
+        padding: 0.75rem;
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="message">
-        Leaderboard will be coming soon
-    </div>
+  <h1>🚧 Leaderboard Coming Soon</h1>
+
+  <!-- Task 1 -->
+  <h2>Task: Statement Prediction</h2>
+  <div class="leaderboard-section">
+    <table>
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Model</th>
+          <th>Accuracy</th>
+          <th>Last Updated</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- Task 2 -->
+  <h2>Task: Block Prediction</h2>
+  <div class="leaderboard-section">
+    <table>
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Model</th>
+          <th>F1 Score</th>
+          <th>Last Updated</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- Task 3 -->
+  <h2>Task: Branch Prediction</h2>
+  <div class="leaderboard-section">
+    <table>
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Model</th>
+          <th>Accuracy</th>
+          <th>Last Updated</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+
 </body>
 </html>
-=
