Features for Github pages

--- a/block.html
+++ b/block.html
@@ -358,8 +358,8 @@
         }
 
         window.addEventListener('DOMContentLoaded', () => {
-            loadCSV('/Data/Block_Accuracy_Python.csv', 'block-python');
-            loadCSV('/Data/Block_Accuracy_C.csv', 'block-c');
+            loadCSV('https://codesense-bench.github.io/Data/Block_Accuracy_Python.csv', 'block-python');
+            loadCSV('https://codesense-bench.github.io/Data/Block_Accuracy_C.csv', 'block-c');
         });
     </script>
 
