--- a/io.html
+++ b/io.html
@@ -363,8 +363,8 @@
         }
 
         window.addEventListener('DOMContentLoaded', () => {
-            loadCSV('./Data/output.csv', 'output-prediction');
-            loadCSV('./Data/input.csv', 'input-prediction');
+            loadCSV('https://codesense-bench.github.io/Data/output.csv', 'output-prediction');
+            loadCSV('https://codesense-bench.github.io/Data/input.csv', 'input-prediction');
         });
 
         // Add sorting style
