--- a/property.html
+++ b/property.html
@@ -433,8 +433,8 @@
         }
 
         window.addEventListener('DOMContentLoaded', () => {
-            loadCSV('./Data/alias_branch.csv', 'alias-table', 'alias_branch');
-            loadCSV('./Data/loop_results.csv', 'loop-results', 'loop');
+            loadCSV('/https://codesense-bench.github.io/Data/alias_branch.csv', 'alias-table', 'alias_branch');
+            loadCSV('https://codesense-bench.github.io/Data/loop_results.csv', 'loop-results', 'loop');
         });
 
         // Add sorting style
