--- a/statement.html
+++ b/statement.html
@@ -283,8 +283,8 @@
         // Load data when page loads
         window.addEventListener('DOMContentLoaded', () => {
             // Use absolute paths for GitHub Pages
-            loadCSV('./Data/Statement_Accuracy_Python.csv', 'python-leaderboard');
-            loadCSV('./Data/Statement_Accuracy_C.csv', 'c-leaderboard');
+            loadCSV('https://codesense-bench.github.io/Data/Statement_Accuracy_Python.csv', 'python-leaderboard');
+            loadCSV('https://codesense-bench.github.io/Data/Statement_Accuracy_C.csv', 'c-leaderboard');
         });
     </script>
 </body>
