--- a/property.html
+++ b/property.html
@@ -433,7 +433,7 @@
         }
 
         window.addEventListener('DOMContentLoaded', () => {
-            loadCSV('/https://codesense-bench.github.io/Data/alias_branch.csv', 'alias-table', 'alias_branch');
+            loadCSV('https://codesense-bench.github.io/Data/alias_branch.csv', 'alias-table', 'alias_branch');
             loadCSV('https://codesense-bench.github.io/Data/loop_results.csv', 'loop-results', 'loop');
         });
 
